--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -85,9 +85,9 @@ One time by chance a few years ago, I had the opportunity to look up at the nigh
 
 The combination of very low light pollution and clear sky provided for a very distinctive view of the Milky Way.
 
-I had some interest in astronomy in general, but that event was what sparked the beggining of my interest in astronomical observation.
+I had some interest in astronomy in general, but that event was what sparked the beginning of my interest in astronomical observation.
 
-Eventualy I found about ATM and ended up deciding to build a telescope myself because I found the challenge interesting.
+Eventually I found about ATM and ended up deciding to build a telescope myself because I found the challenge interesting.
 \column{0.4\textwidth}
 \begin{figure}
 \includegraphics[scale=0.45]{assets/800px-Starry_Night_at_La_Silla.jpg}
@@ -105,8 +105,8 @@ It has a 200mm diameter main mirror and initially I planned for a focal length o
 Why these choices?
 \begin{itemize}
 \item For a certain telescope diameter (aperture), it is the least complicated type to make (only one convex main mirror lens and a small diagonal flat mirror).
-\item A 200mm main mirror with 1200mm focal lenght is one of the most common configurations. It is a compromise between portability and light collection capability.
-\item Provided you make some simple tools, the mirror's optical quality will only be limited by the amount of time you want to spend and pacience (or lack thereof).
+\item A 200mm main mirror with 1200mm focal length is one of the most common configurations. It is a compromise between portability and light collection capability.
+\item Provided you make some simple tools, the mirror's optical quality will only be limited by the amount of time you want to spend and patience (or lack thereof).
 \end{itemize}
 \end{frame}
 
@@ -120,13 +120,13 @@ The main components of a Newtonian reflector telescope are the main concave mirr
 the diagonal flat mirror, and the eyepiece\footnotemark.
 \footnotetext{\url{https://en.wikipedia.org/wiki/Eyepiece}}
 
-Incoming light (red dashed line) comes from the top of the telescope, iluminates the main mirror, and is reflected back to the eyepiece by the diagonal mirror.
+Incoming light (red dashed line) comes from the top of the telescope, illuminates the main mirror, and is reflected back to the eyepiece by the diagonal mirror.
 \end{frame}
 
 \begin{frame}
 \frametitle{Making the main mirror}
-In a good mirror, its surface must not have any imperfections with more than $0.07 \mu m$ of deviation from the theoretical ideal surface [texereau].
-This ideal surface must be a paraboloid\footnotemark to correctly focus the light rays comming from very far away objects.
+In a good mirror, its surface must not have any imperfections with more than $0.07 \mu m$ of deviation from the theoretical ideal surface.
+This ideal surface must be a paraboloid\footnotemark to correctly focus the light rays coming from very far away objects.
 \footnotetext{\url{https://en.wikipedia.org/wiki/Parabolic_reflector}}
 
 How does one make such smooth surface? It turns out it can be done with easily built hand tools and a simple set of steps:
@@ -135,7 +135,7 @@ How does one make such smooth surface? It turns out it can be done with easily b
 \item \textit{Rough grinding}. Generates a first approximation of the optical surface. Results in a rough surface.
 \item \textit{Fine grinding and smoothing}. Removes all the major pits and scratches created in rough grinding and further approximates the optical surface.
 \item \textit{Polishing}. Complete removal of small pits and scratches.
-\item \textit{Testing and retoutching}. Examination of the mirror for defects and their correction.
+\item \textit{Testing and retouching}. Examination of the mirror for defects and their correction.
 \end{itemize}
 \end{frame}
 
@@ -147,7 +147,7 @@ Mirror grinding and smoothing operations are accomplished with a tool and a sequ
 
 The tool must be a disc with similar size to that of the mirror. It can be made of glass or other hard material.
 
-Variations of a W movement are performed between tool and mirror disc while also stepping from position to position arround the mirror.
+Variations of a W movement are performed between tool and mirror disc while also stepping from position to position around the mirror.
 \column{0.5\textwidth}
 \begin{figure}
 \includegraphics[scale=0.35]{assets/stroke.pdf}
@@ -192,11 +192,11 @@ There are several tests that can be used with varying degrees of complexity and 
 \column{0.5\textwidth}
 The Foucault test is one of the oldest types of test available to the amateur to test their mirror.
 
-It is the most popular test within the ATM circle. This is due both to its ease of understanding and operation\footnote[frame]{\url{https://atm-workshop.com/foucault.html}}, and also because the tester hardware is easy to build from comonly obtainable materials\footnote[frame]{\url{https://stellafane.org/stellafane-main/tm/atm/test/tester-1.html}}.
+It is the most popular test within the ATM circle. This is due both to its ease of understanding and operation\footnote[frame]{\url{https://atm-workshop.com/foucault.html}}, and also because the tester hardware is easy to build from commonly obtainable materials\footnote[frame]{\url{https://stellafane.org/stellafane-main/tm/atm/test/tester-1.html}}.
 \column{0.5\textwidth}
 \begin{figure}
 \includegraphics[scale=0.3]{assets/Foucault.jpg}
-\caption{Foucalt test capture during actual testing on my mirror. This capture is one of a series of captures taken at a specific offsets from the mirror's radius of curvature.}
+\caption{Foucault test capture during actual testing on my mirror. This capture is one of a series of captures taken at a specific offsets from the mirror's radius of curvature.}
 \end{figure}
 \end{columns}
 \end{frame}
@@ -207,7 +207,7 @@ It is the most popular test within the ATM circle. This is due both to its ease 
 \column{0.5\textwidth}
 Interferometry testing is a much more recent addition to the ATM tool set.
 
-The availability of cheap solid state laser diodes and a few optical components, made possible for a simplified interometer called the Bath Interferometer to be build at home\footnote[frame]{\url{http://rohr.aiax.de/Using a Bath - EN.pdf}}. Coupled with open source software made by the ATM comunity provided for a complete solution to perform interferomety analysis.
+The availability of cheap solid state laser diodes and a few optical components, made possible for a simplified interferometer called the Bath Interferometer to be build at home\footnote[frame]{\url{http://rohr.aiax.de/Using a Bath - EN.pdf}}. Coupled with open source software made by the ATM community provided for a complete solution to perform interferometry analysis.
 \column{0.5\textwidth}
 \begin{figure}
 \includegraphics[scale=0.3]{assets/bath.jpg}
@@ -223,9 +223,9 @@ So far I have only worked on the mirror lens and it has been a very interesting 
 
 As shown in the previous slide, the mirror is showing some astigmatism defects that need to be resolved. This is the current state.
 
-After that, the next step will be to have it electricaly coated with a very thin aluminium reflective coating. I can't do this myself, so I need to send it over to a specialized facility to do that for me.
+After that, the next step will be to have it electrically coated with a very thin aluminum reflective coating. I can't do this myself, so I need to send it over to a specialized facility to do that for me.
 
-When the mirror is done, what remains to be built is the Optical Tube Assembly (OTA). I will build the tube myself, but will buy the remaning components, like the mirror cell, the focuser and the diagonal mirror.
+When the mirror is done, what remains to be built is the Optical Tube Assembly (OTA). I will build the tube myself, but will buy the remaining components, like the mirror cell, the focuser and the diagonal mirror.
 \end{frame}
 
 \begin{frame}
@@ -236,7 +236,7 @@ I graduated in Electrical Engineering an have a general interest in science and 
 
 I was welcomed into the the Critical family 6 years ago and I've been working mainly in the aviation industry.
 
-I like science fiction, to build stuff, specially electronic circuits and of couse the telescope I was talking about.
+I like science fiction, to build stuff, specially electronic circuits and of course the telescope I was talking about.
 
 \begin{figure}
 \includegraphics[scale=0.3]{assets/self.jpg}
