--- a/ATM_Presentation.tex
+++ b/ATM_Presentation.tex
@@ -196,7 +196,7 @@ It is the most popular test within the ATM circle. This is due both to its ease 
 \column{0.5\textwidth}
 \begin{figure}
 \includegraphics[scale=0.3]{assets/Foucault.jpg}
-\caption{Foucault test capture during actual testing on my mirror. This capture is one of a series of captures taken at a specific offsets from the mirror's radius of curvature.}
+\caption{Foucault test capture during actual testing on my mirror. This capture is one of a series of captures taken at specific offsets from the mirror's radius of curvature.}
 \end{figure}
 \end{columns}
 \end{frame}
@@ -232,7 +232,7 @@ When the mirror is done, what remains to be built is the Optical Tube Assembly (
 \frametitle{About the author}
 My name is Nuno Sousa and I'm from Peniche, Portugal.
 
-I graduated in Electrical Engineering an have a general interest in science and astronomy.
+I graduated in Electrical Engineering an have a general interest in science.
 
 I was welcomed into the the Critical family 6 years ago and I've been working mainly in the aviation industry.
 
